prevent horizontal overscroll on small screens

--- a/src/component/base/base/index.css
+++ b/src/component/base/base/index.css
@@ -27,7 +27,6 @@ body {
 }
 
 body {
-  min-width: 100vw;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
