--- a/src/component/theme/index.css
+++ b/src/component/theme/index.css
@@ -303,8 +303,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   pointer-events: none;
   z-index: var(--z-index-background);
